# xeni

./: .env.example  .gitignore  E2e Testing Checklist  README.md  check_client.js  docker-compose.prod.yml  docker-compose.yml  extra-walkthrough.md  implementation_plan.md  out.html  task.md  test_flow.py  walkthrough.md
.github/workflows/: ci.yml  debug_logs.yml  deploy.yml
frontend/: .dockerignore  .env.example  Dockerfile  fix-prefixes.js  fix-theme.js  fix-theme.py  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/messages/: bn.json  en.json
frontend/public/: .gitkeep
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/components/: GoogleProvider.tsx  LoadingSpinner.tsx  Navbar.tsx  ProtectedRoute.tsx  Providers.tsx  (+2 more)
gateway/: .dockerignore  .env.example  Dockerfile  go.mod  test_flow.go  test_register.go
gateway/cmd/: main.go
gateway/migrations/: 002_admin_tables.sql  002_admin_tables_down.sql  003_fix_plans_features.sql  004_add_task_results.sql
gateway/scripts/: test_flow.go  test_register.go
infra/firebase/: service-account.json
infra/mongo/: init.js
infra/nginx/: nginx.conf
infra/postgres/: init.sql  migration_v2.sql  migration_v3.sql  migration_v4.sql  upgrade_admin.sql
infra/prometheus/: prometheus.yml
infra/rabbitmq/: definitions.json  rabbitmq.conf
scripts/: wait-for-it.sh
workers/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
workers/app/: agents.py  base_worker.py  config.py  main.py  metrics.py
(+109 files in other folders)
