[tool.poetry]
name = "xeni-workers"
version = "1.0.0"
description = "XENI AI Business OS — Python AI Workers"
authors = ["XENI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pika = "^1.3.2"
pymongo = "^4.10.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
boto3 = "^1.35.0"
resend = "^2.5.0"
httpx = "^0.28.0"
prometheus-client = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
